// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button container should handle default onClick function correctly 1`] = `
<div>
  <button
    class="Button"
  >
    <span
      class="Button-text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button container should render an icon and no children correctly 1`] = `
<div>
  <button
    class="Button Button--withIcon Button--iconOnly"
  >
    <span
      class="Button-icon"
    >
      <div />
    </span>
  </button>
</div>
`;

exports[`Button container should render an icon correctly 1`] = `
<div>
  <button
    class="Button Button--withIcon"
  >
    <span
      class="Button-icon"
    >
      <div />
    </span>
    <span
      class="Button-text"
    >
      children
    </span>
  </button>
</div>
`;

exports[`Button container should render children correctly 1`] = `
<div>
  <button
    class="Button"
  >
    <span
      class="Button-text"
    >
      children
    </span>
  </button>
</div>
`;

exports[`Button container should render correctly 1`] = `
<div>
  <button
    class="Button"
  />
</div>
`;
